Full project backup before uninstalling BaoTa panel - includes database, all source code, configurations, and documentation